[package]
name = "libipt-sys"
description = "raw bindings to the libipt intel processor tracing library"
repository = "https://github.com/sum-catnip/libipt-sys"
license = "MIT"
version = "0.2.0"
documentation = "https://docs.rs/libipt-sys/"
authors = ["catnip <catnip@catnip.fyi>", "Marcondiro"]
edition = "2021"
exclude = [
  "libipt/doc",
  "libipt/pevent",
  "libipt/ptdump",
  "libipt/ptseg",
  "libipt/pttc",
  "libipt/ptunit",
  "libipt/ptxed",
  "libipt/script",
  "libipt/sideband",
  "libipt/test",
  "libipt/.gitignore",
  "libipt/CONTRIBUTING",
  "libipt/README",
]

[build-dependencies]
cmake = "0.1.50"
bindgen = "0.70.1"
